Criação da pagina para escolas e alteraçoes

--- a/psicanaliseEscola.html
+++ b/psicanaliseEscola.html
@@ -37,46 +37,25 @@
 				<!-- Content -->
 				<section>
 					<header class="main">
-						<h1>Para futuros empresarios</h1>
+						<h1>Psicanálise nas escolas</h1>
 					</header>
 
 					<div>
 						<p>
-							Se você deseja ser empresário e ainda não deu o chute inicial, venha fazer entrevistas com
-							uma psicanalista e pensar em seu desejo, formatar, transformá-lo em um produto vendável e
-							comercializável. Em seguida, você passa por entrevistas com o Artista Designer Wilsan
-							Takeuchi para pensar num Logo e num site com o seu perfil. Então, você conversa com o
-							facilitador de contatos Rodrigo Gouveia, que navega por entre empresários e conhece
-							iniciativas inusitadas e pode te colocar em contato com personalidades que te abram portas
-							nesse novo caminho.<br />
-							<h4>Inscreva-se, deixe seu contato e assim que possível daremos andamento às entrevistas.
-							</h4>
+							Devido ao grande índice de depressão na adolescência, tentativas de suicídio, uso de drogas,
+							dificuldades com o despertar da sexualidade, fraturas nas interações sociais e
+							hiperconectividade digital, UNBEWUSSTE, em parceria com empresários que se preocupam com a
+							responsabilidade social, elabora projetos para que na escola seja possível debater e
+							dialogar sobre fatores emocionais. Neste momento precioso da constituição do sujeito e nesse
+							cenário desresponsabilizado do século XXI, é importante que o adolescente tenha acesso à
+							construção freudiana de aparelho psíquico, à dimensão emocional do inconsciente e saber que
+							existem recursos para lidar com todas as suas interrogações num espaço protegido e
+							direcionado que é a análise.<br/>
+							Se você é empresário é quer participar desta responsabilidade social, deixe seu cadastro que
+							entraremos em contato para montar o projeto. Se você pertence a uma escola e deseja que o
+							projeto vá até sua escola, deixe seu contato e faremos o possível para melhor atende-lo.
 
 						</p>
-					</div>
-					<div>
-						<form method="post" action="#">
-							<div class="row gtr-uniform">
-								<div class="col-6 col-12-xsmall">
-									<input type="text" name="nome" id="nome" value="" placeholder="Nome">
-								</div>
-								<div class="col-6 col-12-xsmall">
-									<input type="email" name="email" id="email" value="" placeholder="Email">
-								</div>
-								<div class="col-4 col-12-xsmall">
-									<input type="text" name="telefone" id="telefone" value="" placeholder="Telefone">
-								</div>
-								<div class="col-12">
-									<textarea name="comentario" id="comentario" placeholder="Digite um comentario(opcional)"
-										rows="6"></textarea>
-								</div>
-								<div class="col-12">
-									<ul class="actions">
-										<li><input type="submit" value="Enviar" class="Enviar"></li>
-									</ul>
-								</div>
-							</div>
-						</form>
 					</div>
 				</section>
 			</div>
