--- a/quemSomos.html
+++ b/quemSomos.html
@@ -76,6 +76,29 @@
 						Melancólica: um estudo psicanalítico sobre a dor de existir (2016). Blog: artesedebates Youtube:
 						Fabiana Ratti
 					</p>
+					<h3>Clarissa Willets </h3>
+					<img class="image" src="images/pic08.jpg" alt="" />
+					<p>
+						Médica formada pela Universidade de São Paulo em 2009 (USP), com residência em Medicina de
+						Família e Comunidade (MFC). Atualmente, é doutoranda em ciências pela USP. Pratica a MFC em
+						diversos cenários: na assistência, é responsável pelo cuidado continuado de uma população no
+						modelo de Estratégia Saúde da Família do SUS. Na medicina privada, é parte de uma equipe de
+						orientação médica à distância (telemedicina) e visitas domiciliares. No campo do ensino,
+						participa da produção de material técnico-pedagógico para o Ministério da Saúde, FIOCRUZ e para
+						a USP, onde também é médica tutora do Programa de Residência em MFC e preceptora de alunos de
+						graduação de diversos cursos da área da saúde.<br />
+						Numa sociedade em que muitas vezes, saúde, cultura e educação são tratados como produtos a serem
+						vendidos e rifados no mercado, esquecendo a qualidade e o sujeito que está ali por trás daquela
+						nota baixa ou daquele órgão, o médico de família vem num movimento de retorno às raízes e aos
+						principais valores da vida: o ser humano. O médico de família é aquele médico de confiança, que
+						é possível acessar em diferentes momentos, para todos os membros da família. Conhecendo o
+						histórico, o modo de se relacionar e os valores da família, a forma de ver e medicar o sintoma
+						muda de perspectiva. Desta forma, a adesão do paciente ao tratamento toma uma outra proporção,
+						um outro sabor, pois além do profissional, laços de afeto os unem. Poder contar constantemente
+						na saúde e na doença, em diferentes situações, ultrapassar juntos situações difíceis e comemorar
+						conquistas, faz de Clarissa Willets uma médica ímpar e especial.
+
+					</p>
 					<hr class="major" />
 
 					<header>
@@ -87,9 +110,20 @@
 							class="icon brands fa-linkedin"></a></h3>
 					<img class="image" src="images/pic08.jpg" alt="" />
 					<p>
-						Raquel Pereira é consultora em Gestão Empresarial. Trabalhou por oito anos no mercado financeiro
-						e há 10 anos passou a atuar na área de consultoria administrativo-financeira para empresas de
-						pequeno e médio porte, incluindo organizações não governamentais sem fins lucrativos.
+						Raquel Pereira está no mundo administrativo e das finanças desde 2000. Trabalhou 8 anos no
+						mercado financeiro até que montou sua própria empresa de consultoria para dar assessoria e
+						suporte a empresas que tenham o seu perfil e que vendam o produto no qual acredita. Os
+						psicanalistas Lacaniano envoltos por entre sentimentos, pensamentos, livros intelectuais,
+						dissertações e teses, casos graves, internações e tentativas de suicídio, Raquel Pereira
+						consegue, com cautela e inteligência, organizar e administrar a vida e os negócios desses
+						profissionais que lutam pela saúde e esquecem um pouco da contabilidade, das estatísticas, das
+						relações quânticas. Porém, essas relações são importantíssimas para a continuidade e permanência
+						de uma empresa no mercado. Raquel Pereira não apenas administra como ministra aulas de finanças
+						e administração para que os profissionais da empresa consigam ganhar autonomia e discernimento
+						estratégico e assim, a empresa cresça numa só direção, sem cair em disrupções e brigas típicas
+						de um capitalismo mal administrado. Administrar prevalecendo os laços e as relações humanas é o
+						que podemos perceber em sua prática cotidiana. Acredita que administração e finanças são
+						ferramentas para mudar o mundo.
 					</p>
 
 					<hr class="major" />
@@ -103,7 +137,34 @@
 					<p>
 						Wilson Takeuchi é formado pelas Artes Plásticas na FAAP há 30 anos. Por vinte anos trabalhou no
 						setor de marketing de agência de publicidade chegando a Diretor de Arte e então saiu para ter
-						sua própria empresa de artes.
+						sua própria empresa de artes.<br />
+						Com sua sensibilidade artística, cultura e senso estético propôs que incluíssemos na arte do
+						site a lógica borromeana apresentada por Jacques Lacan em que
+						somos todos atravessados pelo real, simbólico e imaginário. Só temos acesso a fragmentos de
+						realidade, não à realidade em si, afirma Lacan em seu ensino. Fazer análise é suportar a
+						desconstrução. Desconstruir verdades estabelecidas e reconstruir uma visão de mundo única e
+						singular. Por isso, o artista escolhido pelo nosso diretor de arte, representa a empresa. Fazer
+						análise é suportar o não-todo, a falta, a incompletude e sobreviver às imperfeições indo em
+						direção ao Um, ao desejo, rumo à singularidade de cada sujeito. Nossas fotos fragmentadas
+						representam essa singularidade. Cada um vê por um prisma, cada um tem o psicanalista que
+						consegue enxergar, cada um tem as relações que consegue cuidar, cada um tem o mundo que consegue
+						construir
+					</p>
+					<header>
+						<h2 style="color:#987F42;">FACILITADOR DE CONTATO<br /></h2><br /><br />
+					</header>
+					<h3>Rodrigo Gouveia </h3>
+					<img class="image" src="images/pic08.jpg" alt="" />
+					<p>
+						Num momento em que a sociedade está em desenlace, em que forças disruptivas falam mais alto e os
+						contratos familiares, amorosos, profissionais são suplantados e colocados à mercê das flutuações
+						dos prazeres e das pulsões, fortalecendo a rebeldia e a infidelidade; aparece na sociedade
+						projetos como o de Rodrigo Gouveia propondo um retorno ao laço. Com Teammind Black Round Table é
+						possível o encontro, o laço, a troca. Pessoas unidas pelo mesmo ideal de construção, criação,
+						com possibilidade de gerar emprego e colocar no mercado produtos de conteúdo, Rodrigo Gouveia
+						cria o ambiente ideal para a escuta, a circulação de perguntas e a construção de amizade.
+						Rodrigo, excelente facilitador de contatos, pioneiro em unir pessoas por meio de parcerias
+						estratégicas, vislumbra o bem comum seja entre marcas ou pessoas.
 					</p>
 			</div>
 		</div>
@@ -131,6 +192,7 @@
 						<li><a href="empresasParceiras.html">Empresas Parceiras</a></li>
 						<li><a href="psicanaliseEmpresa.html">Psicanálise na Empresa</a></li>
 						<li><a href="futuroEmpresario.html">Para futuros empresarios</a></li>
+						<li><a href="psicanaliseEscola.html">Psicanálise nas escolas</a></li>
 						<li><a href="paraEmpresario.html">Para empresários</a></li>
 						<li><a href="espacoEstudo.html">Espaço de estudo</a></li>
 						<li><a href="linhaAtendimento.html">Linha de atendimento: clínica do Real</a></li>
@@ -173,17 +235,17 @@
 	<script src="assets/js/breakpoints.min.js"></script>
 	<script src="assets/js/util.js"></script>
 	<script src="assets/js/main.js"></script>
-<!--Start of Tawk.to Script-->
-<script type="text/javascript">
-	var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-	(function(){
-	var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-	s1.async=true;
-	s1.src='https://embed.tawk.to/57d1c877cccb3b470cdb1d53/default';
-	s1.charset='UTF-8';
-	s1.setAttribute('crossorigin','*');
-	s0.parentNode.insertBefore(s1,s0);
-	})();
+	<!--Start of Tawk.to Script-->
+	<script type="text/javascript">
+		var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
+		(function () {
+			var s1 = document.createElement("script"), s0 = document.getElementsByTagName("script")[0];
+			s1.async = true;
+			s1.src = 'https://embed.tawk.to/57d1c877cccb3b470cdb1d53/default';
+			s1.charset = 'UTF-8';
+			s1.setAttribute('crossorigin', '*');
+			s0.parentNode.insertBefore(s1, s0);
+		})();
 	</script>
 	<!--End of Tawk.to Script-->
 </body>
