--- a/redeAtendimento.html
+++ b/redeAtendimento.html
@@ -253,6 +253,7 @@
 						<li><a href="empresasParceiras.html">Empresas Parceiras</a></li>
 						<li><a href="psicanaliseEmpresa.html">Psicanálise na Empresa</a></li>
 						<li><a href="futuroEmpresario.html">Para futuros empresarios</a></li>
+						<li><a href="psicanaliseEscola.html">Psicanálise nas escolas</a></li>
 						<li><a href="paraEmpresario.html">Para empresários</a></li>
 						<li><a href="espacoEstudo.html">Espaço de estudo</a></li>
 						<li><a href="linhaAtendimento.html">Linha de atendimento: clínica do Real</a></li>
