--- a/empresasParceiras.html
+++ b/empresasParceiras.html
@@ -47,54 +47,63 @@
 					<div class="posts">
 						<article>
 							<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
-							<h3>Interdum aenean</h3>
-							<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam
-								facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+							<h3>Restaurante Bueno Yzakaya </h3>
+							<h4>Insatagram:
+								<a href="https://www.instagram.com/buenoizakaya/?hl=pt-br"
+									class="icon brands fa-instagram" target="_blank"></a></h4>
+							<p>Espaço aconchegante e descontraído com capacidade para 100 pessoas, onde a cultura e a
+								tradição da comida japonesa e coreana são servidas no mais alto estilo seguindo os
+								temperos e aromas típicos da comida asiática. O Restaurante não serve sushi e nem
+								sashimi, são pratos quentes mantendo o costume e a diversidade da região. Além da
+								nutrição alimentar, o restaurante aposta na importância da nutrição intelectual,
+								psíquica e social.</p>
 							<ul class="actions">
 								<li><a href="#" class="button">More</a></li>
 							</ul>
 						</article>
 						<article>
 							<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
-							<h3>Nulla amet dolore</h3>
-							<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam
-								facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+							<h3>Entler Cimini Advocacia </h3>
+							<h4>Site:<a href="http://entlercimini.com.br/" target="_blank">Clique aqui</a></h4>
+							<p>Escritório Boutique focado em resultados e em atendimento personalizado ao cliente. Com
+								uma trajetória construída desde 2001 na experiência de entregar conclusões jurídicas de
+								qualidade, atuam em várias áreas do direito de maneira multidisciplinar, prestando
+								assistência consultiva e contenciosa a demandas específicas e a segmento de negócios
+								variados. A empresa foca no bom relacionamento e proximidade com o cliente, buscando
+								construir relações de parceria pautados na confiança e integridade. Com uma equipe
+								acessível e atualizada, o trabalho é atender solicitações pontuais e buscar antecipar
+								soluções com o objetivo de alavancar os melhores resultados. </p>
 							<ul class="actions">
 								<li><a href="#" class="button">More</a></li>
 							</ul>
 						</article>
 						<article>
 							<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
-							<h3>Tempus ullamcorper</h3>
-							<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam
-								facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-							<ul class="actions">
-								<li><a href="#" class="button">More</a></li>
-							</ul>
-						</article>
-						<article>
-							<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
-							<h3>Sed etiam facilis</h3>
-							<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam
-								facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+							<h3>Porte, Engenharia e Urbanismo</h3>
+							<h4>Site:<a href="https://porte.com.br/" target="_blank">Clique aqui</a></h4>
+							<p>A Porte, empresa de engenharia e urbanismo, está no mercado desde 1986 a serviço do
+								desenvolvimento humano, criando e entregando soluções urbanas. Juntos, Porte e cidade,
+								promovem o desenvolvimento humano por meio da transformação urbana. A empresa procura
+								identificar, atender e fortalecer as necessidades do sistema de gestão, para além da
+								construção de moradias, e assim poder contribuir com a educação, a cultura e a saúde da
+								população que a Porte atende. Desta forma, constrói hospital, centro de convivência e
+								apoia empresas e pessoas ligadas à arte, à educação, à saúde e à saúde mental. O
+								cidadão, para morar bem, precisa ter espaços de lazer e convivência, cuidados com o
+								corpo e a saúde, relacionamento humano e afetivo. </p>
 							<ul class="actions">
 								<li><a href="#" class="button">More</a></li>
 							</ul>
 						</article>
 						<article>
 							<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
-							<h3>Feugiat lorem aenean</h3>
-							<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam
-								facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-							<ul class="actions">
-								<li><a href="#" class="button">More</a></li>
-							</ul>
-						</article>
-						<article>
-							<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
-							<h3>Amet varius aliquam</h3>
-							<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam
-								facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+							<h3>Teco Paisagismo </h3>
+							<h4>Insatagram:
+								<a href="https://www.instagram.com/tecopaisagismo/?hl=pt-br"
+									class="icon brands fa-instagram" target="_blank"></a></h4>
+							<p>A TECO Paisagismo é uma empresa de arquitetura e paisagismo que tem como principais
+								ideais a viabilidade e a modernidade em suas implementações. Atua nas mais variadas
+								escalas e busca objetividade em suas composições, adequando-as para um mundo cada vez
+								mais tecnológico e sustentável. </p>
 							<ul class="actions">
 								<li><a href="#" class="button">More</a></li>
 							</ul>
@@ -128,6 +137,7 @@
 						<li><a href="empresasParceiras.html">Empresas Parceiras</a></li>
 						<li><a href="psicanaliseEmpresa.html">Psicanálise na Empresa</a></li>
 						<li><a href="futuroEmpresario.html">Para futuros empresarios</a></li>
+						<li><a href="psicanaliseEscola.html">Psicanálise nas escolas</a></li>
 						<li><a href="paraEmpresario.html">Para empresários</a></li>
 						<li><a href="espacoEstudo.html">Espaço de estudo</a></li>
 						<li><a href="linhaAtendimento.html">Linha de atendimento: clínica do Real</a></li>
@@ -171,17 +181,17 @@
 	<script src="assets/js/breakpoints.min.js"></script>
 	<script src="assets/js/util.js"></script>
 	<script src="assets/js/main.js"></script>
-<!--Start of Tawk.to Script-->
-<script type="text/javascript">
-	var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-	(function(){
-	var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-	s1.async=true;
-	s1.src='https://embed.tawk.to/57d1c877cccb3b470cdb1d53/default';
-	s1.charset='UTF-8';
-	s1.setAttribute('crossorigin','*');
-	s0.parentNode.insertBefore(s1,s0);
-	})();
+	<!--Start of Tawk.to Script-->
+	<script type="text/javascript">
+		var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
+		(function () {
+			var s1 = document.createElement("script"), s0 = document.getElementsByTagName("script")[0];
+			s1.async = true;
+			s1.src = 'https://embed.tawk.to/57d1c877cccb3b470cdb1d53/default';
+			s1.charset = 'UTF-8';
+			s1.setAttribute('crossorigin', '*');
+			s0.parentNode.insertBefore(s1, s0);
+		})();
 	</script>
 	<!--End of Tawk.to Script-->
 </body>
