--- a/index.html
+++ b/index.html
@@ -87,9 +87,6 @@
 							de Redes UNBEWUSSTE borromeana.
 
 						</p>
-						<ul class="actions">
-							<li><a class="button big" id="btnLeia">Learn More</a></li>
-						</ul>
 					</div>
 					<span class="image object">
 						<img src="images/pic10.jpg" alt="" />
@@ -109,9 +106,6 @@
 							e invista em projetos comuns de forma singular.
 
 						</p>
-						<ul class="actions">
-							<li><a class="button big" id="btnLeia">Learn More</a></li>
-						</ul>
 					</div>
 					<span class="image object">
 						<img src="images/pic10.jpg" alt="" />
@@ -143,6 +137,7 @@
 						<li><a href="empresasParceiras.html">Empresas Parceiras</a></li>
 						<li><a href="psicanaliseEmpresa.html">Psicanálise na Empresa</a></li>
 						<li><a href="futuroEmpresario.html">Para futuros empresarios</a></li>
+						<li><a href="psicanaliseEscola.html">Psicanálise nas escolas</a></li>
 						<li><a href="paraEmpresario.html">Para empresários</a></li>
 						<li><a href="espacoEstudo.html">Espaço de estudo</a></li>
 						<li><a href="linhaAtendimento.html">Linha de atendimento: clínica do Real</a></li>
