--- a/atendimento.html
+++ b/atendimento.html
@@ -1,9 +1,4 @@
 <!DOCTYPE HTML>
-<!--
-	Editorial by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 
 <head>
@@ -15,24 +10,22 @@
 
 <body class="is-preload">
 
-	<!-- Wrapper -->
 	<div id="wrapper">
 
-		<!-- Main -->
 		<div id="main">
 			<div class="inner">
 
-				<!-- Header -->
 				<header id="header">
 					<div>
-						<img src="images/UNBEWUSSTE.png" style="max-width: 20%;height: auto;align-items: center;">
+						<img src="images/UNBEWUSSTEAUDIO.png" style="max-width: 20%;height: auto;align-items: center;margin-top: 1%;"onclick="document.getElementById('player').play()"style="margin-left: 1%">
+						<audio id="player" src="Audio/UNBEWUSSTE.mp3"></audio>
 						<img src="images/ELEMENTO_.png"
-							style="max-width: 10%;height: auto;align-items: center;margin-left: 25%;">
-						<img src="images/FABIANA RATTI.png"
-							style="margin-bottom: 1%;margin-left: 22%;max-width: 20%;height: auto;align-items: center;">
+							style="max-width: 10%;height: auto;align-items: center;margin-left: 21%;">
+						<img src="images/FABIANA RATTI PSICANALISTA.png"
+							style="margin-left: 23%;max-width: 20%;height: auto;align-items: center;">
 					</div>
 				</header>
-				<ul class="icons">
+				<ul class="icons" style="float: right;">
 					<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 					<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a>
 					</li>
@@ -40,72 +33,41 @@
 					</li>
 					<li><a href="#" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li>
 				</ul>
-
-				<!-- Content -->
 				<section>
 					<header class="main">
-						<h1>Quem Somos</h1>
+						<h1>Inscreva-se para ser atendido</h1>
+						<div>
+							<form method="post" action="#">
+								<div class="row gtr-uniform">
+									<div class="col-6 col-12-xsmall">
+										<input type="text" name="nome" id="nome" value="" placeholder="Nome">
+									</div>
+									<div class="col-6 col-12-xsmall">
+										<input type="email" name="email" id="email" value="" placeholder="Email">
+									</div>
+									<div class="col-4 col-12-xsmall">
+										<input type="text" name="telefone" id="telefone" value="" placeholder="Telefone">
+									</div>
+									<div class="col-12">
+										<textarea name="comentario" id="comentario"
+											placeholder="Digite um comentario(opcional)" rows="6"></textarea>
+									</div>
+									<div class="col-12">
+										<ul class="actions">
+											<li><input type="submit" value="Enviar" class="Enviar"></li>
+										</ul>
+									</div>
+								</div>
+							</form>
+						</div>
 					</header>
-
-					<span class="image main"><img src="images/pic11.jpg" alt="" /></span>
-					<header>
-						<h2 style="color:#987F42;">SETOR CLÍNICO<br /></h2><br /><br />
-					</header>
-					<h3>Fabiana Ratti – Psicanalista responsável pelo setor técnico-clínico dos
-						atendimentos.</h3>
-					<img class="image" src="images/pic08.jpg" alt="" />
-					<p>
-						Fabiana Ratti é Psicóloga (PUC-SP), Psicanalista Lacaniana, mestre pela Faculdade de Psicologia
-						Clínica PUC-SP, atuou em órgãos não governamentais como psicanalista e supervisora atendendo
-						diversos sintomas e faixas etárias. Trabalha em consultório particular desde 1998 sob o
-						referencial teórico da última clínica da Psicanálise Lacaniana. Autora do livro Inibição
-						Melancólica: um estudo psicanalítico sobre a dor de existir (2016). Blog: artesedebates Youtube:
-						Fabiana Ratti
-					</p>
-					<hr class="major" />
-
-					<header>
-						<h2 style="color:#987F42;">SETOR ADMINISTRATIVO<br /></h2><br /><br />
-					</header>
-					<h3>Raquel Pereira – Responsável pelo setor administrativo e planilhamento de fluxo de
-						pacientes para os psicanalistas da Rede Unbewusste.
-						<a href="https://www.linkedin.com/in/raquel-pereira-89b60113/"
-							class="icon brands fa-linkedin"></a></h3>
-					<img class="image" src="images/pic08.jpg" alt="" />
-					<p>
-						Raquel Pereira é consultora em Gestão Empresarial. Trabalhou por oito anos no mercado financeiro
-						e há 10 anos passou a atuar na área de consultoria administrativo-financeira para empresas de
-						pequeno e médio porte, incluindo organizações não governamentais sem fins lucrativos.
-					</p>
-
-					<hr class="major" />
-
-					<header>
-						<h2 style="color:#987F42;">SETOR DE MARKETING<br /></h2><br /><br />
-					</header>
-					<h3>Wilson Takeuchi – É responsável pela construção do site, das redes sociais e da produção de
-						conteúdo para divulgação da Rede. </h3>
-					<img class="image" src="images/pic08.jpg" alt="" />
-					<p>
-						Wilson Takeuchi é formado pelas Artes Plásticas na FAAP há 30 anos. Por vinte anos trabalhou no
-						setor de marketing de agência de publicidade chegando a Diretor de Arte e então saiu para ter
-						sua própria empresa de artes.
-					</p>
+				</section>
 			</div>
 		</div>
 
-		<!-- Sidebar -->
 		<div id="sidebar">
 			<div class="inner">
 
-				<!-- Search -->
-				<section id="search" class="alt">
-					<form method="post" action="#">
-						<input type="text" name="query" id="query" placeholder="Search" />
-					</form>
-				</section>
-
-				<!-- Menu -->
 				<nav id="menu">
 					<header class="major">
 						<h2>Menu</h2>
@@ -118,18 +80,17 @@
 						<li><a href="psicanaliseEmpresa.html">Psicanálise na Empresa</a></li>
 						<li><a href="futuroEmpresario.html">Para futuros empresarios</a></li>
 						<li><a href="psicanaliseEscola.html">Psicanálise nas escolas</a></li>
-						<li><a href="paraEmpresario.html">Para empresários</a></li>
 						<li><a href="espacoEstudo.html">Espaço de estudo</a></li>
 						<li><a href="linhaAtendimento.html">Linha de atendimento: clínica do Real</a></li>
 						<li><a href="psicanalistaParceiro.html">Psicanalista parceiro</a></li>
 						<li><a href="painelCultural.html">Painel Cultural</a></li>
 						<li><a href="biblioteca.html">Biblioteca</a></li>
 						<li><a href="parceria.html">Trabalhe em parceria conosco</a></li>
-						<li><a href="atendimento.html"></a>Inscreva-se para ser atendido</a></li>
+						<li><a href="atendimento.html">Inscreva-se para ser atendido</a></li>
+						<li><a href="acompanhanteTerapeutico.html">Acompanhante Terapêutico</a></li>
 					</ul>
 				</nav>
 
-				<!-- Section -->
 				<section>
 					<header class="major">
 						<h2>Contato</h2>
@@ -144,7 +105,6 @@
 					</ul>
 				</section>
 
-				<!-- Footer -->
 				<footer id="footer">
 					<p class="copyright">&copy; Fabiana Ratti. Todos os direitos Reservados.</p>
 				</footer>
@@ -154,25 +114,11 @@
 
 	</div>
 
-	<!-- Scripts -->
 	<script src="assets/js/jquery.min.js"></script>
 	<script src="assets/js/browser.min.js"></script>
 	<script src="assets/js/breakpoints.min.js"></script>
 	<script src="assets/js/util.js"></script>
 	<script src="assets/js/main.js"></script>
-<!--Start of Tawk.to Script-->
-<script type="text/javascript">
-	var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-	(function(){
-	var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-	s1.async=true;
-	s1.src='https://embed.tawk.to/57d1c877cccb3b470cdb1d53/default';
-	s1.charset='UTF-8';
-	s1.setAttribute('crossorigin','*');
-	s0.parentNode.insertBefore(s1,s0);
-	})();
-	</script>
-	<!--End of Tawk.to Script-->
 </body>
 
 </html>
