--- a/empresasParceiras.html
+++ b/empresasParceiras.html
@@ -1,9 +1,4 @@
 <!DOCTYPE HTML>
-<!--
-	Editorial by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 
 <head>
@@ -15,21 +10,19 @@
 
 <body class="is-preload">
 
-	<!-- Wrapper -->
 	<div id="wrapper">
 
-		<!-- Main -->
 		<div id="main">
 			<div class="inner">
 
-				<!-- Header -->
 				<header id="header">
 					<div>
-						<img src="images/UNBEWUSSTE.png" style="max-width: 20%;height: auto;align-items: center;">
+						<img src="images/UNBEWUSSTEAUDIO.png" style="max-width: 20%;height: auto;align-items: center;margin-top: 1%;"onclick="document.getElementById('player').play()"style="margin-left: 1%">
+						<audio id="player" src="Audio/UNBEWUSSTE.mp3"></audio>
 						<img src="images/ELEMENTO_.png"
-							style="max-width: 10%;height: auto;align-items: center;margin-left: 25%;">
-						<img src="images/FABIANA RATTI.png"
-							style="margin-bottom: 1%;margin-left: 22%;max-width: 20%;height: auto;align-items: center;">
+							style="max-width: 10%;height: auto;align-items: center;margin-left: 21%;">
+						<img src="images/FABIANA RATTI PSICANALISTA.png"
+							style="margin-left: 23%;max-width: 20%;height: auto;align-items: center;">
 					</div>
 				</header>
 				<ul class="icons" style="float: right;">
@@ -53,12 +46,13 @@
 									class="icon brands fa-instagram" target="_blank"></a></h4>
 							<p>Espaço aconchegante e descontraído com capacidade para 100 pessoas, onde a cultura e a
 								tradição da comida japonesa e coreana são servidas no mais alto estilo seguindo os
-								temperos e aromas típicos da comida asiática. O Restaurante não serve sushi e nem
+								temperos e aromas típicos da comida asiática.</p>
+							<p id="empresa1Texto" style="display: none;">O Restaurante não serve sushi e nem
 								sashimi, são pratos quentes mantendo o costume e a diversidade da região. Além da
 								nutrição alimentar, o restaurante aposta na importância da nutrição intelectual,
 								psíquica e social.</p>
 							<ul class="actions">
-								<li><a href="#" class="button">More</a></li>
+								<li><a class="button" id="empresa1Botao">Mais</a></li>
 							</ul>
 						</article>
 						<article>
@@ -69,12 +63,14 @@
 								uma trajetória construída desde 2001 na experiência de entregar conclusões jurídicas de
 								qualidade, atuam em várias áreas do direito de maneira multidisciplinar, prestando
 								assistência consultiva e contenciosa a demandas específicas e a segmento de negócios
-								variados. A empresa foca no bom relacionamento e proximidade com o cliente, buscando
+								variados.</p>
+							<p id="empresa2Texto" style="display: none;"> A empresa foca no bom relacionamento e
+								proximidade com o cliente, buscando
 								construir relações de parceria pautados na confiança e integridade. Com uma equipe
 								acessível e atualizada, o trabalho é atender solicitações pontuais e buscar antecipar
 								soluções com o objetivo de alavancar os melhores resultados. </p>
 							<ul class="actions">
-								<li><a href="#" class="button">More</a></li>
+								<li><a class="button" id="empresa2Botao">Mais</a></li>
 							</ul>
 						</article>
 						<article>
@@ -83,7 +79,8 @@
 							<h4>Site:<a href="https://porte.com.br/" target="_blank">Clique aqui</a></h4>
 							<p>A Porte, empresa de engenharia e urbanismo, está no mercado desde 1986 a serviço do
 								desenvolvimento humano, criando e entregando soluções urbanas. Juntos, Porte e cidade,
-								promovem o desenvolvimento humano por meio da transformação urbana. A empresa procura
+								promovem o desenvolvimento humano por meio da transformação urbana.</p>
+							<p id="empresa3Texto" style="display: none;"> A empresa procura
 								identificar, atender e fortalecer as necessidades do sistema de gestão, para além da
 								construção de moradias, e assim poder contribuir com a educação, a cultura e a saúde da
 								população que a Porte atende. Desta forma, constrói hospital, centro de convivência e
@@ -91,7 +88,7 @@
 								cidadão, para morar bem, precisa ter espaços de lazer e convivência, cuidados com o
 								corpo e a saúde, relacionamento humano e afetivo. </p>
 							<ul class="actions">
-								<li><a href="#" class="button">More</a></li>
+								<li><a class="button" id="empresa3Botao">Mais</a></li>
 							</ul>
 						</article>
 						<article>
@@ -101,11 +98,12 @@
 								<a href="https://www.instagram.com/tecopaisagismo/?hl=pt-br"
 									class="icon brands fa-instagram" target="_blank"></a></h4>
 							<p>A TECO Paisagismo é uma empresa de arquitetura e paisagismo que tem como principais
-								ideais a viabilidade e a modernidade em suas implementações. Atua nas mais variadas
+								ideais a viabilidade e a modernidade em suas implementações. </p>
+							<p id="empresa4Texto" style="display: none;">Atua nas mais variadas
 								escalas e busca objetividade em suas composições, adequando-as para um mundo cada vez
 								mais tecnológico e sustentável. </p>
 							<ul class="actions">
-								<li><a href="#" class="button">More</a></li>
+								<li><a id="empresa4Botao" class="button">Mais</a></li>
 							</ul>
 						</article>
 					</div>
@@ -114,18 +112,9 @@
 			</div>
 		</div>
 
-		<!-- Sidebar -->
 		<div id="sidebar">
 			<div class="inner">
 
-				<!-- Search -->
-				<section id="search" class="alt">
-					<form method="post" action="#">
-						<input type="text" name="query" id="query" placeholder="Search" />
-					</form>
-				</section>
-
-				<!-- Menu -->
 				<nav id="menu">
 					<header class="major">
 						<h2>Menu</h2>
@@ -138,17 +127,16 @@
 						<li><a href="psicanaliseEmpresa.html">Psicanálise na Empresa</a></li>
 						<li><a href="futuroEmpresario.html">Para futuros empresarios</a></li>
 						<li><a href="psicanaliseEscola.html">Psicanálise nas escolas</a></li>
-						<li><a href="paraEmpresario.html">Para empresários</a></li>
 						<li><a href="espacoEstudo.html">Espaço de estudo</a></li>
 						<li><a href="linhaAtendimento.html">Linha de atendimento: clínica do Real</a></li>
 						<li><a href="psicanalistaParceiro.html">Psicanalista parceiro</a></li>
 						<li><a href="painelCultural.html">Painel Cultural</a></li>
 						<li><a href="biblioteca.html">Biblioteca</a></li>
 						<li><a href="parceria.html">Trabalhe em parceria conosco</a></li>
-						<li><a href="atendimento.html"></a>Inscreva-se para ser atendido</a></li>
+						<li><a href="atendimento.html">Inscreva-se para ser atendido</a></li>
+						<li><a href="acompanhanteTerapeutico.html">Acompanhante Terapêutico</a></li>
 					</ul>
 				</nav>
-				<!-- Section -->
 				<section>
 					<header class="major">
 						<h2>Contato</h2>
@@ -164,7 +152,6 @@
 					</ul>
 				</section>
 
-				<!-- Footer -->
 				<footer id="footer">
 					<p class="copyright">&copy; Fabiana Ratti. Todos os direitos Reservados.</p>
 				</footer>
@@ -174,26 +161,12 @@
 		</div>
 
 	</div>
-
-	<!-- Scripts -->
 	<script src="assets/js/jquery.min.js"></script>
 	<script src="assets/js/browser.min.js"></script>
 	<script src="assets/js/breakpoints.min.js"></script>
 	<script src="assets/js/util.js"></script>
 	<script src="assets/js/main.js"></script>
-	<!--Start of Tawk.to Script-->
-	<script type="text/javascript">
-		var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
-		(function () {
-			var s1 = document.createElement("script"), s0 = document.getElementsByTagName("script")[0];
-			s1.async = true;
-			s1.src = 'https://embed.tawk.to/57d1c877cccb3b470cdb1d53/default';
-			s1.charset = 'UTF-8';
-			s1.setAttribute('crossorigin', '*');
-			s0.parentNode.insertBefore(s1, s0);
-		})();
-	</script>
-	<!--End of Tawk.to Script-->
+	<script src="assets/js/Paginas/empresasParceiras.js"></script>
 </body>
 
 </html>
