--- a/index.html
+++ b/index.html
@@ -1,9 +1,4 @@
 <!DOCTYPE HTML>
-<!--
-	Editorial by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 
 <head>
@@ -15,20 +10,20 @@
 
 <body class="is-preload">
 
-	<!-- Wrapper -->
 	<div id="wrapper">
 
-		<!-- Main -->
 		<div id="main">
 			<div class="inner">
-				<!-- Header -->
 				<header id="header">
 					<div>
-						<img src="images/UNBEWUSSTE.png" style="max-width: 20%;height: auto;align-items: center;">
+						<img src="images/UNBEWUSSTEAUDIO.png"
+							style="max-width: 20%;height: auto;align-items: center;margin-top: 1%;"
+							onclick="document.getElementById('player').play()" style="margin-left: 1%">
+						<audio id="player" src="Audio/UNBEWUSSTE.mp3"></audio>
 						<img src="images/ELEMENTO_.png"
-							style="max-width: 10%;height: auto;align-items: center;margin-left: 25%;">
-						<img src="images/FABIANA RATTI.png"
-							style="margin-bottom: 1%;margin-left: 22%;max-width: 20%;height: auto;align-items: center;">
+							style="max-width: 10%;height: auto;align-items: center;margin-left: 21%;">
+						<img src="images/FABIANA RATTI PSICANALISTA.png"
+							style="margin-left: 23%;max-width: 20%;height: auto;align-items: center;">
 					</div>
 				</header>
 				<ul class="icons" style="float: right;">
@@ -39,39 +34,39 @@
 					</li>
 					<li><a href="#" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li>
 				</ul>
-				<!-- Banner -->
 				<section id="banner">
 					<div class="content">
 						<header>
 							<h3 style="color:#987F42;">UNBEWUSSTE<br />
 								EXCELÊNCIA EM SAUDE MENTAL</h3>
 						</header>
-						<div id="box-toggle">
-							<b>UNBEWUSSTE</b> – é uma clínica que oferece atendimento psicanalítico lacaniano. Para tal,
+						<b>UNBEWUSSTE</b> – é uma clínica que oferece atendimento psicanalítico lacaniano. Para tal,
 							formamos Redes de encaminhamentos, psicanalistas especializados para atender. A missão da
 							clínica UNBEWUSSTE é deixar a psicanálise e conceitos psicanalíticos acessíveis a um maior
 							número possível de pessoas:<br />
 							- Atendimento psicanalítico individual <br />
 							- Atendimento casal e família <br />
 							- Redes de atendimento clínico por endereços de São Paulo <br />
+							- grupos de estudos<br />
+							- aulas online<br />
+							- intervenções e debates em escolas<br />
 							- Supervisão clínica <br />
-							<div class="tgl">
-								<p>
-									- Supervisão institucional <br />
-									- Debates clínicos <br />
-									- Debates e palestras <br />
-									- Desenvolvimento de projetos e montagens de empresas <br />
-									- Divulgação de conteúdo e conceitos dos psicanalistas Sigmund Freud (1856-1939) e
-									Jacques Lacan (1901-1981).
-								</p>
-							</div>
-						</div>
+						<p id="texto1" style="display: none;">
+							- Supervisão institucional <br />
+							- Debates clínicos <br />
+							- Debates e palestras <br />
+							- Desenvolvimento de projetos e montagens de empresas <br />
+							- Divulgação de conteúdo e conceitos dos psicanalistas Sigmund Freud (1856-1939) e
+							Jacques Lacan (1901-1981).
+						</p>
+						<ul class="actions">
+							<li><a class="button" id="botao1">Mais</a></li>
+						</ul>
 					</div>
 					<span class="image object">
 						<img src="images/pic10.jpg" alt="" />
 					</span>
 				</section>
-				<!-- Banner -->
 				<section id="banner">
 					<div class="content">
 						<header>
@@ -114,16 +109,8 @@
 			</div>
 		</div>
 
-		<!-- Sidebar -->
 		<div id="sidebar">
 			<div class="inner">
-
-				<!-- Search -->
-				<section id="search" class="alt">
-					<form method="post" action="#">
-						<input type="text" name="query" id="query" placeholder="Search" />
-					</form>
-				</section>
 
 				<!-- Menu -->
 				<nav id="menu">
@@ -138,18 +125,17 @@
 						<li><a href="psicanaliseEmpresa.html">Psicanálise na Empresa</a></li>
 						<li><a href="futuroEmpresario.html">Para futuros empresarios</a></li>
 						<li><a href="psicanaliseEscola.html">Psicanálise nas escolas</a></li>
-						<li><a href="paraEmpresario.html">Para empresários</a></li>
 						<li><a href="espacoEstudo.html">Espaço de estudo</a></li>
 						<li><a href="linhaAtendimento.html">Linha de atendimento: clínica do Real</a></li>
 						<li><a href="psicanalistaParceiro.html">Psicanalista parceiro</a></li>
 						<li><a href="painelCultural.html">Painel Cultural</a></li>
 						<li><a href="biblioteca.html">Biblioteca</a></li>
 						<li><a href="parceria.html">Trabalhe em parceria conosco</a></li>
-						<li><a href="atendimento.html"></a>Inscreva-se para ser atendido</a></li>
+						<li><a href="atendimento.html">Inscreva-se para ser atendido</a></li>
+						<li><a href="acompanhanteTerapeutico.html">Acompanhante Terapêutico</a></li>
 					</ul>
 				</nav>
 
-				<!-- Section -->
 				<section>
 					<header class="major">
 						<h2>Contato</h2>
@@ -165,7 +151,6 @@
 					</ul>
 				</section>
 
-				<!-- Footer -->
 				<footer id="footer">
 					<p class="copyright">&copy; Fabiana Ratti. Todos os direitos Reservados.</p>
 				</footer>
@@ -175,25 +160,12 @@
 
 	</div>
 
-	<!-- Scripts -->
 	<script src="assets/js/jquery.min.js"></script>
 	<script src="assets/js/browser.min.js"></script>
 	<script src="assets/js/breakpoints.min.js"></script>
 	<script src="assets/js/util.js"></script>
 	<script src="assets/js/main.js"></script>
-	<!--Start of Tawk.to Script-->
-	<script type="text/javascript">
-		var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
-		(function () {
-			var s1 = document.createElement("script"), s0 = document.getElementsByTagName("script")[0];
-			s1.async = true;
-			s1.src = 'https://embed.tawk.to/57d1c877cccb3b470cdb1d53/default';
-			s1.charset = 'UTF-8';
-			s1.setAttribute('crossorigin', '*');
-			s0.parentNode.insertBefore(s1, s0);
-		})();
-	</script>
-	<!--End of Tawk.to Script-->
+	<script src="assets/js/Paginas/index.js"></script>
 </body>
 
 </html>
