correçoes do site

--- a/painelCultural.html
+++ b/painelCultural.html
@@ -15,32 +15,37 @@
 		<div id="main">
 			<div class="inner">
 
+
 				<header id="header">
 					<div>
-						<img src="images/UNBEWUSSTEAUDIO.png"
+						<img src="images/UNBEWUSSTE.png"
 							style="max-width: 20%;height: auto;align-items: center;margin-top: 1%;"
-							onclick="document.getElementById('player').play()" style="margin-left: 1%">
+							style="margin-left: 2%">
+						<img src="images/audio2.png"
+							style="max-width: 5%;height: auto;align-items: center;margin-top: 1%;margin-bottom: 1%;margin-left:0.5%;"
+							onclick="document.getElementById('player').play()">
 						<audio id="player" src="Audio/UNBEWUSSTE.mp3"></audio>
 						<img src="images/ELEMENTO_.png"
 							style="max-width: 10%;height: auto;align-items: center;margin-left: 21%;">
 						<img src="images/FABIANA RATTI PSICANALISTA.png"
-							style="margin-left: 23%;max-width: 20%;height: auto;align-items: center;">
+							style="margin-left: 22%;max-width: 20%;height: auto;align-items: center;">
 					</div>
 				</header>
 				<ul class="icons" style="float: right;">
-					<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-					<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a>
+					<li><a href="https://www.facebook.com/fabiana.ratti.1" class="icon brands fa-facebook-f"><span
+								class="label">Facebook</span></a>
 					</li>
-					<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a>
+					<li><a href="https://www.instagram.com/fabianaratti/?hl=pt-br"
+							class="icon brands fa-instagram"><span class="label">Instagram</span></a>
 					</li>
-					<li><a href="#" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li>
 				</ul>
 				<section>
 					<header class="main">
 						<h1>Painel Cultural</h1>
 					</header>
 
-					<iframe width="100%" height="500px" src="http://artesedebates.blogspot.com" allowfullscreen></iframe>
+					<iframe width="100%" height="500px" src="http://artesedebates.blogspot.com"
+						allowfullscreen></iframe>
 				</section>
 			</div>
 		</div>
@@ -57,7 +62,6 @@
 						<li><a href="quemSomos.html">Quem Somos</a></li>
 						<li><a href="redeAtendimento.html">Rede de Atendimento</a></li>
 						<li><a href="empresasParceiras.html">Empresas Parceiras</a></li>
-						<li><a href="psicanaliseEmpresa.html">Psicanálise na Empresa</a></li>
 						<li><a href="futuroEmpresario.html">Para futuros empresarios</a></li>
 						<li><a href="psicanaliseEscola.html">Psicanálise nas escolas</a></li>
 						<li><a href="espacoEstudo.html">Espaço de estudo</a></li>
@@ -65,9 +69,9 @@
 						<li><a href="psicanalistaParceiro.html">Psicanalista parceiro</a></li>
 						<li><a href="painelCultural.html">Painel Cultural</a></li>
 						<li><a href="biblioteca.html">Biblioteca</a></li>
+						<li><a href="acompanhanteTerapeutico.html">Acompanhante Terapêutico</a></li>
 						<li><a href="parceria.html">Trabalhe em parceria conosco</a></li>
 						<li><a href="atendimento.html">Inscreva-se para ser atendido</a></li>
-						<li><a href="acompanhanteTerapeutico.html">Acompanhante Terapêutico</a></li>
 					</ul>
 				</nav>
 
@@ -77,7 +81,7 @@
 					</header>
 					<ul class="contact">
 						<ul class="contact">
-							<li class="icon solid fa-envelope"><a href="#">information@untitled.tld</a></li>
+							<li class="icon solid fa-envelope"><a href="#">fabianaratti@gmail.com</a></li>
 							<li class="icon solid fa-phone">(11) 99955-8857</li>
 							<li class="icon solid fa-home">R. Cônego Eugênio Leite, 933<br />conjunto 75 -
 								Pinheiros<br />
