--- a/quemSomos.html
+++ b/quemSomos.html
@@ -16,23 +16,29 @@
 		<div id="main">
 			<div class="inner">
 
+
 				<header id="header">
 					<div>
-						<img src="images/UNBEWUSSTEAUDIO.png" style="max-width: 20%;height: auto;align-items: center;margin-top: 1%;"onclick="document.getElementById('player').play()"style="margin-left: 1%">
+						<img src="images/UNBEWUSSTE.png"
+							style="max-width: 20%;height: auto;align-items: center;margin-top: 1%;"
+							style="margin-left: 2%">
+						<img src="images/audio2.png"
+							style="max-width: 5%;height: auto;align-items: center;margin-top: 1%;margin-bottom: 1%;margin-left:0.5%;"
+							onclick="document.getElementById('player').play()">
 						<audio id="player" src="Audio/UNBEWUSSTE.mp3"></audio>
 						<img src="images/ELEMENTO_.png"
 							style="max-width: 10%;height: auto;align-items: center;margin-left: 21%;">
 						<img src="images/FABIANA RATTI PSICANALISTA.png"
-							style="margin-left: 23%;max-width: 20%;height: auto;align-items: center;">
+							style="margin-left: 22%;max-width: 20%;height: auto;align-items: center;">
 					</div>
 				</header>
 				<ul class="icons" style="float: right;">
-					<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-					<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a>
+					<li><a href="https://www.facebook.com/fabiana.ratti.1" class="icon brands fa-facebook-f"><span
+								class="label">Facebook</span></a>
 					</li>
-					<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a>
+					<li><a href="https://www.instagram.com/fabianaratti/?hl=pt-br"
+							class="icon brands fa-instagram"><span class="label">Instagram</span></a>
 					</li>
-					<li><a href="#" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li>
 				</ul>
 
 				<section>
@@ -40,21 +46,6 @@
 						<h1>Quem Somos</h1>
 					</header>
 
-					<span class="image main"><img src="images/pic11.jpg" alt="" /></span>
-					<header>
-						<h2 style="color:#987F42;">Equipe Profissional:<br /></h2><br />
-					</header>
-					<p>
-						Os profissionais da Rede Unbewusste são formados em Universidades Federais, Estaduais, USP, PUC
-						ou Mackenzie. Eles têm o compromisso de estar fazendo pós-graduação, formação em psicanálise,
-						deste modo, uma educação continuada para sempre avançarem como psicanalistas. Cada pessoa que
-						procurar a Rede será atendida de forma personalizada e dependendo da demanda para atendimento
-						das empresas, podemos aumentar nossa equipe de profissionais para melhor atendê-los. Em alguns
-						momentos, pode ser que tenhamos fila de espera de 15 dias a um mês, caso seja essencial para
-						mantermos a qualidade no atendimento.
-					</p>
-
-					<hr class="major" />
 					<header>
 						<h2 style="color:#987F42;">SETOR CLÍNICO<br /></h2><br /><br />
 					</header>
@@ -159,6 +150,20 @@
 						Rodrigo, excelente facilitador de contatos, pioneiro em unir pessoas por meio de parcerias
 						estratégicas, vislumbra o bem comum seja entre marcas ou pessoas.
 					</p>
+
+					<hr class="major" />
+					<header>
+						<h2 style="color:#987F42;">Equipe Profissional:<br /></h2><br />
+					</header>
+					<p>
+						Os profissionais da Rede Unbewusste são formados em Universidades Federais, Estaduais, USP, PUC
+						ou Mackenzie. Eles têm o compromisso de estar fazendo pós-graduação, formação em psicanálise,
+						deste modo, uma educação continuada para sempre avançarem como psicanalistas. Cada pessoa que
+						procurar a Rede será atendida de forma personalizada e dependendo da demanda para atendimento
+						das empresas, podemos aumentar nossa equipe de profissionais para melhor atendê-los. Em alguns
+						momentos, pode ser que tenhamos fila de espera de 15 dias a um mês, caso seja essencial para
+						mantermos a qualidade no atendimento.
+					</p>
 			</div>
 		</div>
 
@@ -173,7 +178,6 @@
 						<li><a href="quemSomos.html">Quem Somos</a></li>
 						<li><a href="redeAtendimento.html">Rede de Atendimento</a></li>
 						<li><a href="empresasParceiras.html">Empresas Parceiras</a></li>
-						<li><a href="psicanaliseEmpresa.html">Psicanálise na Empresa</a></li>
 						<li><a href="futuroEmpresario.html">Para futuros empresarios</a></li>
 						<li><a href="psicanaliseEscola.html">Psicanálise nas escolas</a></li>
 						<li><a href="espacoEstudo.html">Espaço de estudo</a></li>
@@ -181,9 +185,9 @@
 						<li><a href="psicanalistaParceiro.html">Psicanalista parceiro</a></li>
 						<li><a href="painelCultural.html">Painel Cultural</a></li>
 						<li><a href="biblioteca.html">Biblioteca</a></li>
+						<li><a href="acompanhanteTerapeutico.html">Acompanhante Terapêutico</a></li>
 						<li><a href="parceria.html">Trabalhe em parceria conosco</a></li>
 						<li><a href="atendimento.html">Inscreva-se para ser atendido</a></li>
-						<li><a href="acompanhanteTerapeutico.html">Acompanhante Terapêutico</a></li>
 					</ul>
 				</nav>
 				<section>
@@ -192,7 +196,7 @@
 					</header>
 					<ul class="contact">
 						<ul class="contact">
-							<li class="icon solid fa-envelope"><a href="#">information@untitled.tld</a></li>
+							<li class="icon solid fa-envelope"><a href="#">fabianaratti@gmail.com</a></li>
 							<li class="icon solid fa-phone">(11) 99955-8857</li>
 							<li class="icon solid fa-home">R. Cônego Eugênio Leite, 933<br />conjunto 75 -
 								Pinheiros<br />
