--- a/futuroEmpresario.html
+++ b/futuroEmpresario.html
@@ -15,23 +15,29 @@
 		<div id="main">
 			<div class="inner">
 
+
 				<header id="header">
 					<div>
-						<img src="images/UNBEWUSSTEAUDIO.png" style="max-width: 20%;height: auto;align-items: center;margin-top: 1%;"onclick="document.getElementById('player').play()"style="margin-left: 1%">
+						<img src="images/UNBEWUSSTE.png"
+							style="max-width: 20%;height: auto;align-items: center;margin-top: 1%;"
+							style="margin-left: 2%">
+						<img src="images/audio2.png"
+							style="max-width: 5%;height: auto;align-items: center;margin-top: 1%;margin-bottom: 1%;margin-left:0.5%;"
+							onclick="document.getElementById('player').play()">
 						<audio id="player" src="Audio/UNBEWUSSTE.mp3"></audio>
 						<img src="images/ELEMENTO_.png"
 							style="max-width: 10%;height: auto;align-items: center;margin-left: 21%;">
 						<img src="images/FABIANA RATTI PSICANALISTA.png"
-							style="margin-left: 23%;max-width: 20%;height: auto;align-items: center;">
+							style="margin-left: 22%;max-width: 20%;height: auto;align-items: center;">
 					</div>
 				</header>
 				<ul class="icons" style="float: right;">
-					<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-					<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a>
+					<li><a href="https://www.facebook.com/fabiana.ratti.1" class="icon brands fa-facebook-f"><span
+								class="label">Facebook</span></a>
 					</li>
-					<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a>
+					<li><a href="https://www.instagram.com/fabianaratti/?hl=pt-br"
+							class="icon brands fa-instagram"><span class="label">Instagram</span></a>
 					</li>
-					<li><a href="#" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li>
 				</ul>
 
 				<section>
@@ -52,7 +58,30 @@
 							</h4>
 
 						</p>
+						<h4 style="color:#987F42;">Quer abrir uma empresa? Não sabe por onde começar?</h4>
+						<p>
+							Damos assessoria psicanalítica e de marketing para ajudar você a montar seu conceito de
+							empresa,
+							a nomear o seu desejo e a concretizá-lo através da criação de seu logo e de seu site.
+						</p>
+						<hr class="major" />
+						<h4 style="color:#987F42;">Sua empresa está passando por situações de conflito? É preciso tomar
+							atitudes decisivas?</h4>
+						<p>
+							Entre em contato. Venha consultar um psicanalista que trabalha direcionado para a área
+							empresarial e de negócios.
+						</p>
+						<hr class="major" />
+						<h4 style="color:#987F42;">Sua empresa está entrando em falência?</h4>
+						<p>
+							Damos assessoria psicanalítica e de marketing para que sua empresa tome uma nova direção.
+							Muitas
+							vezes, obstruções em empresas têm a ver com as relações pessoais, com a dificuldade de se
+							posicionar, com questões familiares no âmago da gestão que impedem o desenvolvimento da
+							empresa.
+						</p>
 					</div>
+					<hr class="major" />
 					<div>
 						<form method="post" action="assets/php/formularioPadrao.php">
 							<input type="hidden" id="tipoFormulario" name="tipoFormulario" value="Futuro empresario">
@@ -67,12 +96,12 @@
 									<input type="text" name="telefone" id="telefone" value="" placeholder="Telefone">
 								</div>
 								<div class="col-12">
-									<textarea name="comentario" id="comentario" placeholder="Digite um comentario(opcional)"
-										rows="6"></textarea>
+									<textarea name="comentario" id="comentario"
+										placeholder="Digite um comentario(opcional)" rows="6"></textarea>
 								</div>
 								<div class="col-12">
 									<ul class="actions">
-										<li><input type="submit" value="Enviar" class="Enviar"name="btnEnviar"></li>
+										<li><input type="submit" value="Enviar" class="Enviar" name="btnEnviar"></li>
 									</ul>
 								</div>
 							</div>
@@ -94,7 +123,6 @@
 						<li><a href="quemSomos.html">Quem Somos</a></li>
 						<li><a href="redeAtendimento.html">Rede de Atendimento</a></li>
 						<li><a href="empresasParceiras.html">Empresas Parceiras</a></li>
-						<li><a href="psicanaliseEmpresa.html">Psicanálise na Empresa</a></li>
 						<li><a href="futuroEmpresario.html">Para futuros empresarios</a></li>
 						<li><a href="psicanaliseEscola.html">Psicanálise nas escolas</a></li>
 						<li><a href="espacoEstudo.html">Espaço de estudo</a></li>
@@ -102,9 +130,9 @@
 						<li><a href="psicanalistaParceiro.html">Psicanalista parceiro</a></li>
 						<li><a href="painelCultural.html">Painel Cultural</a></li>
 						<li><a href="biblioteca.html">Biblioteca</a></li>
+						<li><a href="acompanhanteTerapeutico.html">Acompanhante Terapêutico</a></li>
 						<li><a href="parceria.html">Trabalhe em parceria conosco</a></li>
 						<li><a href="atendimento.html">Inscreva-se para ser atendido</a></li>
-						<li><a href="acompanhanteTerapeutico.html">Acompanhante Terapêutico</a></li>
 					</ul>
 				</nav>
 
@@ -113,7 +141,7 @@
 						<h2>Contato</h2>
 					</header>
 					<ul class="contact">
-						<li class="icon solid fa-envelope"><a href="#">information@untitled.tld</a></li>
+						<li class="icon solid fa-envelope"><a href="#">fabianaratti@gmail.com</a></li>
 						<li class="icon solid fa-phone">(11) 99955-8857</li>
 						<li class="icon solid fa-home">R. Cônego Eugênio Leite, 933<br />conjunto 75 - Pinheiros<br />
 							São Paulo, CEP: 05414-012</li>
