--- a/index.html
+++ b/index.html
@@ -14,25 +14,29 @@
 
 		<div id="main">
 			<div class="inner">
+
 				<header id="header">
 					<div>
-						<img src="images/UNBEWUSSTEAUDIO.png"
+						<img src="images/UNBEWUSSTE.png"
 							style="max-width: 20%;height: auto;align-items: center;margin-top: 1%;"
-							onclick="document.getElementById('player').play()" style="margin-left: 1%">
+							style="margin-left: 2%">
+						<img src="images/audio2.png"
+							style="max-width: 5%;height: auto;align-items: center;margin-top: 1%;margin-bottom: 1%;margin-left:0.5%;"
+							onclick="document.getElementById('player').play()">
 						<audio id="player" src="Audio/UNBEWUSSTE.mp3"></audio>
 						<img src="images/ELEMENTO_.png"
 							style="max-width: 10%;height: auto;align-items: center;margin-left: 21%;">
 						<img src="images/FABIANA RATTI PSICANALISTA.png"
-							style="margin-left: 23%;max-width: 20%;height: auto;align-items: center;">
+							style="margin-left: 22%;max-width: 20%;height: auto;align-items: center;">
 					</div>
 				</header>
 				<ul class="icons" style="float: right;">
-					<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-					<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a>
+					<li><a href="https://www.facebook.com/fabiana.ratti.1" class="icon brands fa-facebook-f"><span
+								class="label">Facebook</span></a>
 					</li>
-					<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a>
+					<li><a href="https://www.instagram.com/fabianaratti/?hl=pt-br"
+							class="icon brands fa-instagram"><span class="label">Instagram</span></a>
 					</li>
-					<li><a href="#" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li>
 				</ul>
 				<section id="banner">
 					<div class="content">
@@ -41,16 +45,16 @@
 								EXCELÊNCIA EM SAUDE MENTAL</h3>
 						</header>
 						<b>UNBEWUSSTE</b> – é uma clínica que oferece atendimento psicanalítico lacaniano. Para tal,
-							formamos Redes de encaminhamentos, psicanalistas especializados para atender. A missão da
-							clínica UNBEWUSSTE é deixar a psicanálise e conceitos psicanalíticos acessíveis a um maior
-							número possível de pessoas:<br />
-							- Atendimento psicanalítico individual <br />
-							- Atendimento casal e família <br />
-							- Redes de atendimento clínico por endereços de São Paulo <br />
-							- grupos de estudos<br />
-							- aulas online<br />
-							- intervenções e debates em escolas<br />
-							- Supervisão clínica <br />
+						formamos Redes de encaminhamentos, psicanalistas especializados para atender. A missão da
+						clínica UNBEWUSSTE é deixar a psicanálise e conceitos psicanalíticos acessíveis a um maior
+						número possível de pessoas:<br />
+						- Atendimento psicanalítico individual <br />
+						- Atendimento casal e família <br />
+						- Redes de atendimento clínico por endereços de São Paulo <br />
+						- grupos de estudos<br />
+						- aulas online<br />
+						- intervenções e debates em escolas<br />
+						- Supervisão clínica <br />
 						<p id="texto1" style="display: none;">
 							- Supervisão institucional <br />
 							- Debates clínicos <br />
@@ -64,7 +68,8 @@
 						</ul>
 					</div>
 					<span class="image object">
-						<img src="images/pic10.jpg" alt="" />
+						<img src="images/index1.png" alt="" />
+						<a href="images/index1.png">acessar</a>mais
 					</span>
 				</section>
 				<section id="banner">
@@ -84,7 +89,7 @@
 						</p>
 					</div>
 					<span class="image object">
-						<img src="images/pic10.jpg" alt="" />
+						<img src="images/index2.png" alt="" />
 					</span>
 				</section>
 				<section id="banner">
@@ -103,7 +108,7 @@
 						</p>
 					</div>
 					<span class="image object">
-						<img src="images/pic10.jpg" alt="" />
+						<img src="images/index3.png" alt="" />
 					</span>
 				</section>
 			</div>
@@ -122,7 +127,6 @@
 						<li><a href="quemSomos.html">Quem Somos</a></li>
 						<li><a href="redeAtendimento.html">Rede de Atendimento</a></li>
 						<li><a href="empresasParceiras.html">Empresas Parceiras</a></li>
-						<li><a href="psicanaliseEmpresa.html">Psicanálise na Empresa</a></li>
 						<li><a href="futuroEmpresario.html">Para futuros empresarios</a></li>
 						<li><a href="psicanaliseEscola.html">Psicanálise nas escolas</a></li>
 						<li><a href="espacoEstudo.html">Espaço de estudo</a></li>
@@ -130,9 +134,9 @@
 						<li><a href="psicanalistaParceiro.html">Psicanalista parceiro</a></li>
 						<li><a href="painelCultural.html">Painel Cultural</a></li>
 						<li><a href="biblioteca.html">Biblioteca</a></li>
+						<li><a href="acompanhanteTerapeutico.html">Acompanhante Terapêutico</a></li>
 						<li><a href="parceria.html">Trabalhe em parceria conosco</a></li>
 						<li><a href="atendimento.html">Inscreva-se para ser atendido</a></li>
-						<li><a href="acompanhanteTerapeutico.html">Acompanhante Terapêutico</a></li>
 					</ul>
 				</nav>
 
@@ -142,7 +146,7 @@
 					</header>
 					<ul class="contact">
 						<ul class="contact">
-							<li class="icon solid fa-envelope"><a href="#">information@untitled.tld</a></li>
+							<li class="icon solid fa-envelope"><a href="#">fabianaratti@gmail.com</a></li>
 							<li class="icon solid fa-phone">(11) 99955-8857</li>
 							<li class="icon solid fa-home">R. Cônego Eugênio Leite, 933<br />conjunto 75 -
 								Pinheiros<br />
